feat: add SEO metadata, sitemap, robots.txt, and humans.txt for improved site visibility and information

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,6 +10,29 @@
       rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="BE Commerce - Your one-stop shop for all your needs. Discover a wide range of products at unbeatable prices."
+    />
+    <meta
+      name="keywords"
+      content="e-commerce, online shopping, buy, sell, products, deals, discounts"
+    />
+    <meta name="author" content="Sakshi Jaiswal & Kiran Mahajan" />
+    <meta property="og:title" content="BE Commerce" />
+    <meta
+      property="og:description"
+      content="Your one-stop shop for all your needs. Discover a wide range of products at unbeatable prices."
+    />
+    <meta property="og:image" content="/logo.svg" />
+    <meta property="og:url" content="https://www.be-commerce.onrender.com" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="BE Commerce" />
+    <meta
+      name="twitter:description"
+      content="Your one-stop shop for all your needs. Discover a wide range of products at unbeatable prices."
+    />
+    <meta name="twitter:image" content="/logo.svg" />
     <title>BE Commerce</title>
   </head>
   <body>
