--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,8 +6,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
+      rel="preload"
+      as="style"
+      href="https://fonts.googleapis.com/css2?family=Playwrite+GB+S:ital@0;1&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
+    />
+    <link
       href="https://fonts.googleapis.com/css2?family=Playwrite+GB+S:ital@0;1&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
       rel="stylesheet"
+      media="all"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
